--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,9 @@
 selenium.log
 composer.phar
 /test-install
-
+/.phpunit.result.cache
+/tests/Codeception/acceptance.suite.yml
+/tests/Codeception/_output/
 
 # Vendor directory handeling
 /libraries/vendor
