[4.0] Token authentication for the API application (#27021)

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ composer.phar
 /.phpunit.result.cache
 /tests/Codeception/acceptance.suite.yml
 /tests/Codeception/_output/
+/tests/Codeception/api.suite.yml
+
 
 # Vendor directory handeling
 /libraries/vendor
