--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "codemirror": "^5.52.0",
     "cropperjs": "^1.5.6",
     "css-vars-ponyfill": "^1.17.2",
-    "diff": "3.4.0",
+    "diff": "^4.0.2",
     "dragula": "3.7.2",
     "file-saver": "^1.3.3",
     "focus-visible": "^4.1.4",
