--- a/.eslintignore
+++ b/.eslintignore
@@ -4,6 +4,8 @@
 administrator/components/com_media/node_modules/uri-js/node_modules/punycode/punycode.es6.js
 media
 *.vue
+# Don't validate temporary build files
+build/tmp
 # TODO: Fix the webcomponents codestyle then also allow linting on them
 joomla-editor-codemirror.w-c.es6.js
 joomla-field-fancy-select.w-c.es6.js
