--- a/composer.json
+++ b/composer.json
@@ -13,32 +13,6 @@
         "platform": {
             "php": "7.2.5"
         },
-        "preferred-install": {
-            "joomla/application": "dist",
-            "joomla/archive": "dist",
-            "joomla/authentication": "dist",
-            "joomla/console": "dist",
-            "joomla/controller": "dist",
-            "joomla/crypt": "dist",
-            "joomla/data": "dist",
-            "joomla/database": "dist",
-            "joomla/di": "dist",
-            "joomla/event": "dist",
-            "joomla/filter": "dist",
-            "joomla/http": "dist",
-            "joomla/input": "dist",
-            "joomla/ldap": "dist",
-            "joomla/oauth1": "dist",
-            "joomla/oauth2": "dist",
-            "joomla/mediawiki": "dist",
-            "joomla/registry": "dist",
-            "joomla/router": "dist",
-            "joomla/session": "dist",
-            "joomla/string": "dist",
-            "joomla/test": "dist",
-            "joomla/uri": "dist",
-            "joomla/utilities": "dist"
-        },
         "vendor-dir": "libraries/vendor"
     },
     "support": {
@@ -59,28 +33,27 @@
     },
     "require": {
         "php": "^7.2.5",
-        "joomla/application": "~2.0@dev",
-        "joomla/archive": "~2.0@dev",
-        "joomla/authentication": "~2.0@dev",
-        "joomla/console": "~2.0@dev",
-        "joomla/controller": "~2.0@dev",
-        "joomla/crypt": "~2.0@dev",
-        "joomla/data": "~2.0@dev",
-        "joomla/database": "~2.0@dev",
-        "joomla/di": "~2.0@dev",
-        "joomla/event": "~2.0@dev",
-        "joomla/filter": "~2.0@dev",
-        "joomla/http": "~2.0@dev",
-        "joomla/input": "~2.0@dev",
-        "joomla/ldap": "~2.0@dev",
-        "joomla/oauth1": "~2.0@dev",
-        "joomla/oauth2": "~2.0@dev",
-        "joomla/registry": "~2.0@dev",
-        "joomla/router": "~2.0@dev",
-        "joomla/session": "~2.0@dev",
-        "joomla/string": "~2.0@dev",
-        "joomla/uri": "~2.0@dev",
-        "joomla/utilities": "~2.0@dev",
+        "joomla/application": "~2.0@beta",
+        "joomla/archive": "~2.0@beta",
+        "joomla/authentication": "~2.0@beta",
+        "joomla/console": "~2.0@beta",
+        "joomla/crypt": "~2.0@beta",
+        "joomla/data": "~2.0@beta",
+        "joomla/database": "~2.0@beta",
+        "joomla/di": "~2.0@beta",
+        "joomla/event": "~2.0@beta",
+        "joomla/filter": "~2.0@beta",
+        "joomla/http": "~2.0@beta",
+        "joomla/input": "~2.0@beta",
+        "joomla/ldap": "~2.0@beta",
+        "joomla/oauth1": "~2.0@beta",
+        "joomla/oauth2": "~2.0@beta",
+        "joomla/registry": "~2.0@beta",
+        "joomla/router": "~2.0@beta",
+        "joomla/session": "~2.0@beta",
+        "joomla/string": "~2.0@beta",
+        "joomla/uri": "~2.0@beta",
+        "joomla/utilities": "~2.0@beta",
         "algo26-matthias/idna-convert": "~3.0",
         "defuse/php-encryption": "~2.1",
         "doctrine/inflector": "~1.3",
@@ -119,7 +92,7 @@
         "joomla-projects/joomla-browser": "~4.0@dev",
         "codeception/codeception": "~4.0",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
-        "joomla/test": "~2.@dev",
+        "joomla/test": "~2.0@beta",
         "codeception/module-asserts": "^1.0",
         "codeception/module-db": "^1.0",
         "codeception/module-rest": "^1.0",
