--- a/.hound.yml
+++ b/.hound.yml
@@ -7,13 +7,10 @@ scss:
 scss-lint:
   version: 0.59.0
 
-eslint:
-  version: 6.8.0
-  enabled: true
-  config_file: .eslintrc
-  ignore_file: .eslintignore
-
 # Disable hound default linters
+eslint:
+  enabled: false
+
 jshint:
   enabled: false
 
