Using stylelint and dropping Hound

--- a/package.json
+++ b/package.json
@@ -101,6 +101,10 @@
     "recursive-readdir": "^2.2.2",
     "sass-loader": "^8.0.2",
     "selenium-standalone": "^6.17.0",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
     "uglify-es": "^3.3.9",
     "uglifycss": "^0.0.29",
     "vue-loader": "^15.9.2",
