--- a/.drone.yml
+++ b/.drone.yml
@@ -136,6 +136,12 @@ steps:
       - php -v
       - ./libraries/vendor/bin/phpunit --testsuite Integration --configuration phpunit-pgsql.xml.dist
 
+  - name: scss-cs
+    depends_on: [ npm ]
+    image: node:current-alpine
+    commands:
+      - npx stylelint -s scss "administrator/components/com_media/resources/**/*.scss" "administrator/templates/**/*.scss" "build/media_source/**/*.scss" "templates/**/*.scss" "installation/template/**/*.scss"
+
   - name: javascript-cs
     depends_on: [ npm ]
     image: node:current-alpine
@@ -304,6 +310,6 @@ steps:
 
 ---
 kind: signature
-hmac: 5af59afae9e4cc7cc0e5051bda7a3936df94321eb6d65b908aac3318877eef68
+hmac: 37718821f191b74969e24a3b288dfa131d01daa57d83a10246de58269a587473
 
 ...
