--- a/.eslintignore
+++ b/.eslintignore
@@ -6,3 +6,11 @@ media
 *.vue
 # Don't validate temporary build files
 build/tmp
+# TODO: Fix the webcomponents codestyle then also allow linting on them
+joomla-field-fancy-select.w-c.es6.js
+joomla-field-module-order.w-c.es6.js
+joomla-field-permissions.w-c.es6.js
+joomla-field-send-test-mail.w-c.es6.js
+joomla-field-simple-color.w-c.es6.js
+joomla-field-subform.w-c.es6.js
+# End of TODO
