--- a/.drone.yml
+++ b/.drone.yml
@@ -22,6 +22,8 @@ steps:
     commands:
       - composer validate --no-check-all --strict
       - composer install --no-progress --no-suggest
+      - apk add patch
+      - patch -N -p0 < tests/patch/phpunit8_php8_match.patch
 
   - name: phpcs
     image: joomlaprojects/docker-images:php7.2
@@ -310,6 +312,6 @@ steps:
 
 ---
 kind: signature
-hmac: 37718821f191b74969e24a3b288dfa131d01daa57d83a10246de58269a587473
+hmac: 763286a206429d8304a8cdedd46c176f92d9307a73c1b4d3eb17321c65f2b0b0
 
 ...
