--- a/composer.json
+++ b/composer.json
@@ -80,9 +80,7 @@
         "ext-simplexml": "*",
         "psr/log": "~1.0",
         "ext-gd": "*",
-        "web-auth/webauthn-lib": "2.1.*",
-      "ext-fileinfo": "*",
-      "ext-exif": "*"
+        "web-auth/webauthn-lib": "2.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.0",
