--- a/.drone.yml
+++ b/.drone.yml
@@ -37,24 +37,6 @@ steps:
   - tests/javascript/node_modules/karma/bin/karma start karma.conf.js --single-run
   - echo $(date)
 
-- name: analysis3x
-  image: rips/rips-cli:3.2.2
-  commands:
-  - export RIPS_BASE_URI='https://api.rips.joomla.org'
-  - rips-cli rips:list --table=scans --parameter filter='{"__and":[{"__lessThan":{"percent":100}}]}'
-  - rips-cli rips:scan:start --progress --application=1 --threshold=0 --path=$(pwd) --remove-code --remove-upload --tag=$DRONE_REPO_NAMESPACE-$DRONE_BRANCH || { echo "Please contact the security team at security@joomla.org"; exit 1; }
-  environment:
-    RIPS_EMAIL:
-      from_secret: RIPS_EMAIL
-    RIPS_PASSWORD:
-      from_secret: RIPS_PASSWORD
-  when:
-    branch:
-    - staging
-    repo:
-    - joomla/joomla-cms
-    - joomla/cms-security
-
 volumes:
 - name: composer-cache
   host:
@@ -712,7 +694,34 @@ steps:
     HTTP_ROOT: https://ci.joomla.org/artifacts
 
 ---
+kind: pipeline
+name: Rips
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: analysis3x
+  image: rips/rips-cli:3.2.2
+  commands:
+  - export RIPS_BASE_URI='https://api.rips.joomla.org'
+  - rips-cli rips:list --table=scans --parameter filter='{"__and":[{"__lessThan":{"percent":100}}]}'
+  - rips-cli rips:scan:start --progress --application=1 --threshold=0 --path=$(pwd) --remove-code --remove-upload --tag=$DRONE_REPO_NAMESPACE-$DRONE_BRANCH || { echo "Please contact the security team at security@joomla.org"; exit 1; }
+  environment:
+    RIPS_EMAIL:
+      from_secret: RIPS_EMAIL
+    RIPS_PASSWORD:
+      from_secret: RIPS_PASSWORD
+  when:
+    branch:
+    - staging
+    repo:
+    - joomla/joomla-cms
+    - joomla/cms-security
+
+---
 kind: signature
-hmac: 81005daab8969b1f635ba6d27242e962a0b4aef79bd9f33dfd17986993be1210
+hmac: 891055d296eb627e4c15bb3a6e672a3171d33e74f73d916075cf384b5c9a552e
 
 ...
