--- a/.gitignore
+++ b/.gitignore
@@ -683,3 +683,4 @@ RoboFile.ini
 /administrator/components/com_akeeba/View/wrongphp.php
 /administrator/components/com_akeeba/BackupEngine/Archiver/zip.json
 /administrator/components/com_akeeba/BackupEngine/Archiver/Zip.php
+/administrator/components/com_akeeba/*
