--- a/.gitignore
+++ b/.gitignore
@@ -79,15 +79,14 @@ Desktop.ini
 /libraries/vendor/brumann/polyfill-unserialize/phpunit.xml.dist
 /libraries/vendor/brumann/polyfill-unserialize/README.md
 /libraries/vendor/brumann/polyfill-unserialize/tests
-/libraries/vendor/google/recaptcha/.github
+/libraries/vendor/google/recaptcha/examples
+/libraries/vendor/google/recaptcha/tests
 /libraries/vendor/google/recaptcha/.gitignore
 /libraries/vendor/google/recaptcha/.travis.yml
-/libraries/vendor/google/recaptcha/ARCHITECTURE.md
-/libraries/vendor/google/recaptcha/CONTRIBUTING.md
-/libraries/vendor/google/recaptcha/README.md
-/libraries/vendor/google/recaptcha/app.yaml
 /libraries/vendor/google/recaptcha/composer.json
+/libraries/vendor/google/recaptcha/CONTRIBUTING.md
 /libraries/vendor/google/recaptcha/phpunit.xml.dist
+/libraries/vendor/google/recaptcha/README.md
 /libraries/vendor/ircmaxell/password-compat/test
 /libraries/vendor/ircmaxell/password-compat/.travis.yml
 /libraries/vendor/ircmaxell/password-compat/composer.json
