--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,16 @@
 {
-  // Extend the airbnb eslint config
-  "extends": "airbnb-base",
+
+  "extends": [
+	// Extend the airbnb eslint config
+	"airbnb-base",
+	// Vue
+	"plugin:vue/vue3-recommended"
+  ],
+  "parser": "vue-eslint-parser",
+  "parserOptions": {
+
+	 "sourceType": "module"
+	},
   // ESLint will not look in parent folders for eslint configs
   "root": true,
   // An environment defines global variables that are predefined.
@@ -11,7 +21,8 @@
   },
   // Additional global variables your script accesses during execution
   "globals": {
-    "Joomla": true
+    "Joomla": true,
+	"MediaManager": true
   },
   // Rule overrides
   "rules": {
