--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "short-and-sweet": "^1.0.2",
     "skipto": "^2.1.1",
     "tinymce": "^5.4.1",
-    "vue": "^2.6.10",
+    "vue": "^2.6.12",
     "vue-focus-lock": "^1.3.2",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0"
@@ -81,6 +81,7 @@
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
     "file-loader": "^6.0.0",
     "fs-extra": "^9.0.1",
     "ini": "^1.3.5",
@@ -108,7 +109,7 @@
     "uglify-es": "^3.3.9",
     "uglifycss": "^0.0.29",
     "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.12",
     "walk-sync": "^2.2.0",
     "watch": "^1.0.2",
     "webpack": "^4.44.1",
