--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
     "file-loader": "^6.0.0",
     "fs-extra": "^9.0.1",
     "ini": "^1.3.5",
