--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:js": "node build.js --compile-js",
     "build:css": "node build.js --compile-css",
     "watch": "node build.js --watch",
-    "lint:js": "npx eslint .",
+    "lint:js": "node ./node_modules/eslint/bin/eslint.js --ext .js,.vue .",
     "test": "npx karma start tests/javascript/karma.conf.js --single-run",
     "install": "node build.js --copy-assets && node build.js --build-pages",
     "postinstall": "node build.js --compile-js && node build.js --compile-css && npm run build:com_media",
