--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "popper.js": "^1.16.1",
     "punycode": "1.4.1",
     "qrcode-generator": "^1.4.4",
+    "qs": "^6.9.4",
+    "redaxios": "^0.3.0",
     "roboto-fontface": "^0.10.0",
+    "rollup": "^2.28.2",
     "short-and-sweet": "^1.0.2",
     "skipto": "^2.1.1",
     "tinymce": "^5.4.1",
@@ -67,6 +70,8 @@
     "@babel/preset-env": "^7.11.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@gfx/zopfli": "^1.0.15",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-header-comment": "^1.0.3",
