--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -49,11 +49,10 @@ administrator/components/com_csp/* @zero-24
 components/com_csp/* @zero-24
 
 # Web Authentication (WebAuthn)
-
 plugins/system/webauthn/*   @nikosdion
 media/plg_system_webauthn/*   @nikosdion
-language/administrator/en-GB/en-GB.plg_system_webauthn.ini   @nikosdion
-language/administrator/en-GB/en-GB.plg_system_webauthn.sys.ini   @nikosdion
+administrator/language/en-GB/plg_system_webauthn.ini   @nikosdion
+administrator/language/en-GB/plg_system_webauthn.sys.ini   @nikosdion
 
 # Workflow
 administrator/components/com_workflow/*	@bembelimen @hleithner
