--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:js": "node build.js --compile-js",
     "build:css": "node build.js --compile-css",
     "watch": "node build.js --watch",
-    "lint:js": "npx eslint .",
+    "lint:js": "node ./node_modules/eslint/bin/eslint.js --ext .js,.vue .",
     "test": "npx karma start tests/javascript/karma.conf.js --single-run",
     "install": "node build.js --copy-assets && node build.js --build-pages",
     "postinstall": "node build.js --compile-js && node build.js --compile-css && npm run build:com_media",
@@ -81,6 +81,7 @@
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
     "file-loader": "^6.0.0",
     "fs-extra": "^9.0.1",
     "ini": "^1.3.5",
