--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,19 @@ composer.phar
 
 # Build related
 RoboFile.ini
+# JEvents
+**/com_jevents/**
+**/mod_jevents*/**
+**/googl/**
+**/jevmodal/**
+**/eventsearch/**
+**/gwejson/**
+**/jeventsinstaller/**
+**/jevents
+**/*_jevents*
+**/*_gwejson*
+**/*_eventsearch*
+**/robots.txt
+**/googl.xml
+
+.gitignore
