--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "npm": ">=6.13.4"
   },
   "scripts": {
-    "build:js": "node build.js --compile-js",
-    "build:css": "node build.js --compile-css",
-    "watch": "node build.js --watch",
-    "lint:js": "node ./node_modules/eslint/bin/eslint.js --ext .js,.vue .",
+    "build:js": "node build/build.js --compile-js",
+    "build:css": "node build/build.js --compile-css",
+    "watch": "node build/build.js --watch",
+    "lint:js": "node ./node_modules/eslint/bin/eslint.js --config build/.eslintrc --ext .js,.vue .",
+    "lint:css": "node ./node_modules/stylelint/bin/stylelint.js --config build/.stylelintrc.json -s scss \"administrator/components/com_media/resources/**/*.scss\" \"administrator/templates/**/*.scss\" \"build/media_source/**/*.scss\" \"templates/**/*.scss\" \"installation/template/**/*.scss\"",
     "test": "npx karma start tests/javascript/karma.conf.js --single-run",
-    "install": "node build.js --copy-assets && node build.js --build-pages",
-    "postinstall": "node build.js --compile-js && node build.js --compile-css && npm run build:com_media",
-    "update": "node build.js --copy-assets && node build.js --build-pages && node build.js --compile-js && node build.js --compile-css",
+    "install": "node build/build.js --copy-assets && node build/build.js --build-pages",
+    "postinstall": "node build/build.js --compile-js && node build/build.js --compile-css && npm run build:com_media",
+    "update": "node build/build.js --copy-assets && node build/build.js --build-pages && node build/build.js --compile-js && node build/build.js --compile-css",
     "gzip": "node -e 'require(\"./build/build-modules-js/gzip-assets.es6.js\").gzipFiles()'",
     "watch:com_media": "cross-env NODE_ENV=development webpack --progress --hide-modules --watch --config administrator/components/com_media/webpack.config.js",
     "dev:com_media": "cross-env NODE_ENV=development webpack --progress --hide-modules --config administrator/components/com_media/webpack.config.js",
