--- a/.drone.yml
+++ b/.drone.yml
@@ -24,7 +24,7 @@ steps:
       - echo $(date)
 
   - name: npm
-    image: node:current-alpine
+    image: node:14-alpine
     depends_on: [ phpcs ]
     commands:
       - npm ci --unsafe-perm
@@ -128,20 +128,8 @@ steps:
     commands:
       - npm run lint:js
 
-  - name: javascript-tests
-    depends_on: [ npm ]
-    image: joomlaprojects/docker-images:systemtests
-    environment:
-      JOOMLA_INSTALLATION_DISABLE_LOCALHOST_CHECK: 1
-    commands:
-      - export DISPLAY=:0
-      - Xvfb -screen 0 1024x768x24 -ac +extension GLX +render -noreset > /dev/null 2>&1 &
-      - sleep 3
-      - fluxbox  > /dev/null 2>&1 &
-      - npm run test
-
   - name: system-tests-mysql
-    depends_on: [ javascript-tests ]
+    depends_on: [ javascript-cs ]
     image: joomlaprojects/docker-images:systemtests
     environment:
       JOOMLA_INSTALLATION_DISABLE_LOCALHOST_CHECK: 1
@@ -215,15 +203,9 @@ branches:
   exclude: [ l10n_* ]
 
 volumes:
-- name: cache
-  host:
-    path: /tmp/cache
 - name: composer-cache
   host:
     path: /tmp/composer-cache
-- name: reference
-  host:
-    path: /tmp/reference
 
 services:
   - name: mysql
@@ -242,12 +224,6 @@ services:
       MYSQL_PASSWORD: joomla_ut
       MYSQL_ROOT_PASSWORD: joomla_ut
       MYSQL_DATABASE: test_joomla
-
-  - name: memcached
-    image: memcached:alpine
-
-  - name: redis
-    image: redis:alpine
 
   - name: postgres
     image: postgres:11-alpine
@@ -293,6 +269,6 @@ steps:
 
 ---
 kind: signature
-hmac: 4f58d8f61573498094e990f8f9ca8dec5324e727cfaa277c8fcb2392c17e33fe
+hmac: f99784b6fd6bf3707a600f262bb9e59aa7b5f97e54df8976e459096de4344ef3
 
 ...
