--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -71,7 +71,7 @@ install:
     - IF %PHP%==1 echo opcache.enable_cli=1 >> php.ini
     - IF %PHP%==1 echo extension=php_ldap.dll >> php.ini
     - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
-    - IF %PHP%==1 php -r "readfile('http://getcomposer.org/installer');" | php
+    - IF %PHP%==1 php -r "readfile('https://getcomposer.org/composer-1.phar');" > composer.phar
     - cd C:\projects\joomla-cms
     - appveyor-retry composer install --no-progress --profile
 before_test:
